z-index fix

--- a/Home2/Home.css
+++ b/Home2/Home.css
@@ -784,7 +784,7 @@ body {
   color: rgba(255, 255, 255, 0);
   border-radius: 0 0 20px 20px;
   min-height: 200px;
-  z-index: 1;
+  z-index: -10;
   position: relative;
   cursor: default;
 }
